// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example > Empty matches snapshot 1`] = `
{
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__i": -1,
  "__k": null,
  "__u": 0,
  "__v": 2,
  "constructor": undefined,
  "key": undefined,
  "props": {},
  "ref": undefined,
  "type": [Function],
}
`;

exports[`Example > Error matches snapshot 1`] = `
{
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__i": -1,
  "__k": null,
  "__u": 0,
  "__v": 3,
  "constructor": undefined,
  "key": undefined,
  "props": {},
  "ref": undefined,
  "type": [Function],
}
`;

exports[`Example > Example matches snapshot 1`] = `
{
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__i": -1,
  "__k": null,
  "__u": 0,
  "__v": 4,
  "constructor": undefined,
  "key": undefined,
  "props": {
    "children": "Woof",
    "href": "#",
    "summary": "Jumps over the lazy dog",
    "title": "Quick brown fox",
  },
  "ref": undefined,
  "type": [Function],
}
`;

exports[`Example > Ghost matches snapshot 1`] = `
{
  "__": null,
  "__b": 0,
  "__c": null,
  "__d": undefined,
  "__e": null,
  "__i": -1,
  "__k": null,
  "__u": 0,
  "__v": 1,
  "constructor": undefined,
  "key": undefined,
  "props": {},
  "ref": undefined,
  "type": [Function],
}
`;
